RESOLVED FIXED102027
Some CSS properties are not handled on StyleResolver::applyProperty
https://bugs.webkit.org/show_bug.cgi?id=102027
Summary Some CSS properties are not handled on StyleResolver::applyProperty
KyungTae Kim
Reported 2012-11-12 18:03:01 PST
The CSSPropertyMaxZoom, CSSPropertyMinZoom, CSSPropertyOrientation, CSSPropertyUserZoom properties, that are used when CSS_DEVICE_ADAPTATION enabled, are not properly handled on StyleResolver::applyProperty. When SVG enabled, they are go to applySVGProperty, and when SVG disabled, the below build warning occurs: (In the below case, that was error because -Werror=switch was on) Source/WebCore/css/StyleResolver.cpp: In member function ‘void WebCore::StyleResolver::applyProperty(WebCore::CSSPropertyID, WebCore::CSSValue*)’: Source/WebCore/css/StyleResolver.cpp:2860:12: error: enumeration value ‘CSSPropertyMaxZoom’ not handled in switch [-Werror=switch] Source/WebCore/css/StyleResolver.cpp:2860:12: error: enumeration value ‘CSSPropertyMinZoom’ not handled in switch [-Werror=switch] Source/WebCore/css/StyleResolver.cpp:2860:12: error: enumeration value ‘CSSPropertyOrientation’ not handled in switch [-Werror=switch] Source/WebCore/css/StyleResolver.cpp:2860:12: error: enumeration value ‘CSSPropertyUserZoom’ not handled in switch [-Werror=switch] So, they need to be listed on the StyleResolver::applyProperty.
Attachments
Patch (1.53 KB, patch)
2012-11-12 18:15 PST, KyungTae Kim
no flags
KyungTae Kim
Comment 1 2012-11-12 18:15:47 PST
WebKit Review Bot
Comment 2 2012-11-12 21:33:33 PST
Comment on attachment 173782 [details] Patch Clearing flags on attachment: 173782 Committed r134357: <http://trac.webkit.org/changeset/134357>
WebKit Review Bot
Comment 3 2012-11-12 21:33:36 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.