Some CSS properties are not handled on StyleResolver::applyProperty https://bugs.webkit.org/show_bug.cgi?id=102027

Patch by KyungTae Kim <ktf.kim@samsung.com> on 2012-11-12
Reviewed by Gyuyoung Kim.

The CSSPropertyMaxZoom, CSSPropertyMinZoom, CSSPropertyOrientation and CSSPropertyUserZoom
need to be handled on StyleResolver::applyProperty.

* css/StyleResolver.cpp:
(WebCore::StyleResolver::applyProperty):

Canonical link: https://commits.webkit.org/120099@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@134357 268f45cc-cd09-0410-ab3c-d52691b4dbfc